wrapped devices correct

--- a/assets/css/devices.css
+++ b/assets/css/devices.css
@@ -40,10 +40,12 @@
   }
 
 .marginbox{
-    margin: 10px;
+  margin: 10px;
 }
 
 .rowitem{
-    display: flex;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
